# emokit-c

./: CMakeLists.txt  README.md
examples/contact/: contact.c
examples/values/: CMakeLists.txt  values.c
include/emokit/: emokit.h
